--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ h1 {
     height: 150px;
 }
 
-.item .right{
+.item .right, .container{
     display: inline-block;
 }
 
@@ -105,4 +105,20 @@ header .backbutton {
 footer {
     margin-top: 10px;
     text-align: center;
+}
+
+.detailButton{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
+
+.container{
+    position: relative;
+}
+
+.center{
+    background-color: white;
+    margin: 0 auto;
+    width: 1000px;
 }
